tests/ui/error-codes/E0789.stderr
error[E0789]: `crablangc_allowed_through_unstable_modules` attribute must be paired with a `stable` attribute
  --> $DIR/E0789.rs:9:1
   |
LL | struct Foo;
   | ^^^^^^^^^^^

error[E0789]: `crablangc_allowed_through_unstable_modules` attribute must be paired with a `stable` attribute
  --> $DIR/E0789.rs:9:1
   |
LL | struct Foo;
   | ^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `crablangc --explain E0789`.
